--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ $(document).ready(function () {
                     <div class="post-info clearfix">
                         <h4><a href="#">Governance and Anti-Corruption Diagnostics</a></h4>
                         <ul class="blog-details-preview">
-                            <!-- li><i class="icon-calendar"></i><strong>Project Year:</strong> 2012-14</li><li -->
+                            <!-- li><i class="icon-calendar"></i><strong>Project Year:</strong> 2012-14</li --><li>
                             </li><li><i class="icon-user"></i><strong>Country:</strong> <a href="#" title="Link">Afghanistan</a></li>
                             <li><i class="icon-comment"></i><strong>Partner/Sponsor:</strong> <a href="http://www.worldbank.org/" target="_blank" title="Link">World Bank Group</a></li>
                              
@@ -170,7 +170,7 @@ $(document).ready(function () {
                     <div class="post-info clearfix">
                         <h4><a href="blog-single.htm">Community Infrastructure Development</a></h4>
                         <ul class="blog-details-preview">
-                            <!-- li><i class="icon-calendar"></i><strong>Project Year:</strong> 2013</li><li -->
+                            <!-- li><i class="icon-calendar"></i><strong>Project Year:</strong> 2013</li --><li>
                             </li><li><i class="icon-user"></i><strong>Country:</strong> <a href="#" title="Link">Haiti</a></li>
                             <li><i class="icon-comment"></i><strong>Partner/Sponsor:</strong> <a href="http://www.usaid.gov/" target="_blank" title="Link">USAID</a></li>
                             
